# market

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  manage.py  pyproject.toml  requirements.txt
config/: asgi.py  urls.py  wsgi.py
config/graphql/: middleware.py  schema.py
config/settings/: base.py  local.py  production.py  test.py
docs/: PRODUCT_README.md
infra/: uwsgi.ini
scripts/: create_category_options.py  create_sample_data.py
sso/: client.py  mock_client.py
tanda_backend/common/: eventstore.py  models.py
tanda_backend/merchant/: admin.py  apps.py  models.py
tanda_backend/merchant/graphql/: mutations.py  schema.py  types.py
tanda_backend/merchant/management/commands/: merchant_consumers.py  populate_providers.py
tanda_backend/merchant/migrations/: 0001_initial.py  0002_alter_merchant_provider_alter_merchant_user.py
tanda_backend/merchant/services/: event_handler.py  order_process.py
tanda_backend/oauth/: apps.py  backends.py  jwt.py  mixins.py  mutations.py  schema.py  utils.py
tanda_backend/orders/: apps.py  models.py  tests.py
tanda_backend/orders/graphql/: mutations.py  schema.py  types.py
tanda_backend/orders/migrations/: 0001_initial.py  0002_alter_orderitem_order.py  0003_alter_order_stock_id.py  0004_rename_stock_id_order_stock_task_id_order_merchant_and_more.py  0005_order_created_at.py  0006_alter_orderitem_options_orderitem_shipped_quantity.py
tanda_backend/orders/services/: __init__.py  create_order.py  order_events.py
tanda_backend/payment/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
tanda_backend/payment/graphql/: schema.py  types.py
tanda_backend/payment/migrations/: 0001_initial.py
tanda_backend/products/: admin.py  apps.py  urls.py  views.py
tanda_backend/products/graphql/: mutations.py  schema.py  types.py
tanda_backend/products/management/commands/: colors.csv  consume_options_from_kamda.py  migrate_colors.py  products_consumers.py
tanda_backend/products/migrations/: 0001_initial.py  0002_product_selling_price.py  0003_remove_product_provider_id_product_merchant_and_more.py  0004_categoryoptionrequirement.py  0005_image.py  0006_product_brand_productvariant_article_and_more.py  0007_productvariant_images.py  0008_product_is_approved.py  0009_alter_product_is_approved.py  0010_alter_variantoption_option_value.py  0011_productvariant_provider_sku.py  0012_productvariant_sku.py  0013_productvariant_barcode.py  0014_product_source_service_productvariant_source_service.py
tanda_backend/products/models/: __init__.py  category.py  image.py  options.py  product.py
tanda_backend/products/services/: __init__.py  category_option_events.py  category_option_requirements.py  create_product.py  event_handler.py  external_product_service.py  update_product.py  update_product_variant.py
tanda_backend/users/: admin.py  apps.py  models.py  schema.py  urls.py
tanda_backend/users/migrations/: 0001_initial.py  0002_user_sso_id.py  0003_alter_user_managers_alter_user_password_and_more.py  0004_user_fio.py
Финик/: Finik Payments Gateway API.md  Finik QR Generation.md  Finik Web SDK.md  URLS.md
